--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ h1 {
 	text-decoration: overline underline;
 }
 p {
+	margin: 5%;
 	color: white;
 	font-family: "Tulpen One", cursive;
 	font-size: 30px;
@@ -19,10 +20,11 @@ body {
 }
 .footer {
 	display: flex;
+	margin: 5%;
 }
 .mail {
 	width: 10%;
-	margin: inherit;
+	margin: 0;
 }
 .header {
 }
