--- a/style.css
+++ b/style.css
@@ -32,3 +32,31 @@ body {
 	margin-right: 5%;
 	margin-top: 2.5%;
 }
+h2 {
+	text-align: center;
+	font-family: "Tulpen One", cursive;
+	font-size: 40px;
+	text-decoration: overline underline;
+}
+ul {
+        display: flex;
+        flex-wrap: wrap;
+}
+li {
+        position: relative;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+}
+li h2 {
+        position: absolute;
+        top: 0px;
+        background: white;
+        color: black;
+        width: 100%;
+}
+li:hover h2 {
+        background: black;
+        color: orange;
+}
